Added session var, sign-in(ok), log-in(ok), log-out(ok). I'll need to implement the validation of the password

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -143,6 +143,15 @@ main{
     background-color: red;
 }
 
+#welcomeUser button{
+    background-color: dodgerblue;
+    color: white;
+    height: 30px;
+    width: 200px;
+    margin-top: 0;
+    margin-bottom: 10px;
+}
+
 /* FOOTER */
 footer{
     margin-bottom: 0;
