--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -67,6 +67,11 @@ html, body{
     margin-right: 20px;
 }
 
+.box-shadows .switch, .slider, .round{
+    margin-left: 0;
+    margin-right: 0;
+}
+
 .box-shadows form{
     margin-left: 0;
 }
@@ -101,12 +106,6 @@ main{
     margin-bottom: 0;
 }
 
-.p-info-post{
-    margin-top: 3px;
-    font-family: Arial, "serif";
-    font-size: 12px;
-}
-
 /* ASIDE LOG-IN SIGN-IN */
 .form-log-sign-in h4{
     margin-top: 0;
@@ -135,22 +134,6 @@ main{
 
 .sign-in{
     margin-top: 20px;
-}
-
-.sign-in-ok{
-    background-color: green;
-}
-
-.sign-in-ko{
-    background-color: red;
-}
-
-.log-in-ok{
-    background-color: green;
-}
-
-.log-in-ko{
-    background-color: red;
 }
 
 #formLogOut input[type=submit]{
@@ -246,4 +229,83 @@ footer p{
 /* GENERALES */
 button, input[type=submit]{
     cursor: pointer;
+}
+
+.alert-ok{
+    background-color: green;
+    color: white;
+}
+
+.alert-ko{
+    background-color: red;
+    color: white;
+}
+
+.p-info{
+    margin-top: 3px;
+    font-family: Arial, "serif";
+    font-size: 12px;
+}
+
+/* SWITCHES */
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 60px;
+    height: 34px;
+    left: calc(240px / 2 - 60px / 2);
+    margin-bottom: 15px;
+}
+
+.switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
+.slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+
+.slider:before {
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+
+input:checked + .slider {
+    background-color: #2196F3;
+}
+
+input:focus + .slider {
+    box-shadow: 0 0 1px #2196F3;
+}
+
+input:checked + .slider:before {
+    -webkit-transform: translateX(26px);
+    -ms-transform: translateX(26px);
+    transform: translateX(26px);
+}
+
+/* Rounded sliders */
+.slider.round {
+    border-radius: 34px;
+}
+
+.slider.round:before {
+    border-radius: 50%;
 }
